--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Dev icon fonts -->
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <!-- CSS do projeto -->
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 
 <body>
